Fix DisplaySwitch UI being shown/sticky after shutdown

--- a/DisplaySwitch_Service_VNC/DisplaySwitch_Service_VNC.csproj
+++ b/DisplaySwitch_Service_VNC/DisplaySwitch_Service_VNC.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventLogManagement.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
